<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/icon_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/icon_back"
        android:layout_width="64sp"
        android:layout_height="64sp"
        android:layout_marginTop="32sp"/>

    <ImageView
        app:layout_constraintTop_toTopOf="@id/icon_button"
        app:layout_constraintBottom_toBottomOf="@id/icon_button"
        app:layout_constraintStart_toStartOf="@id/icon_button"
        app:layout_constraintEnd_toEndOf="@id/icon_button"
        android:background="@drawable/app_icon"
        android:layout_width="48sp"
        android:layout_height="48sp"/>

    <ImageView
        app:layout_constraintTop_toTopOf="@id/icon_button"
        app:layout_constraintBottom_toTopOf="@id/icon_button"
        app:layout_constraintStart_toEndOf="@id/icon_button"
        android:background="@drawable/sharp_star"
        android:layout_width="26sp"
        android:layout_height="26sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:textAllCaps="false"
        android:id="@+id/registration_tv"
        app:layout_constraintTop_toBottomOf="@id/icon_button"
        android:layout_marginTop="32sp"
        android:layout_marginStart="44sp"
        android:text="@string/registration"
        android:fontFamily="@font/sf_pro_display_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/login_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_width="wrap_content"
        app:layout_constraintHorizontal_bias="0.5"
        android:background="@drawable/active_button"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:textAllCaps="false"
        android:id="@+id/login_tv"
        app:layout_constraintTop_toBottomOf="@id/icon_button"
        android:layout_marginTop="32sp"
        android:layout_marginEnd="44sp"
        android:text="@string/login"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:fontFamily="@font/sf_pro_display_black"
        android:textSize="16sp"
        android:textColor="#818C99"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:background="@drawable/inactive_button"
        app:layout_constraintStart_toEndOf="@id/registration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/input_name"
        app:layout_constraintTop_toBottomOf="@id/registration_tv"
        android:layout_marginTop="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginEnd="12sp"
        android:layout_marginStart="12sp"
        android:hint="@string/name"
        android:paddingStart="16sp"
        android:textSize="14sp"
        android:layout_height="58sp"
        android:background="@drawable/input_background"/>

    <EditText
        android:id="@+id/input_phone"
        app:layout_constraintTop_toBottomOf="@id/input_name"
        android:layout_marginTop="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginEnd="12sp"
        android:layout_marginStart="12sp"
        android:hint="@string/phone_number"
        android:paddingStart="16sp"
        android:textSize="14sp"
        android:layout_height="58sp"
        android:background="@drawable/input_background"/>

    <EditText
        android:id="@+id/input_password"
        app:layout_constraintTop_toBottomOf="@id/input_phone"
        android:layout_marginTop="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginEnd="12sp"
        android:layout_marginStart="12sp"
        android:hint="@string/password"
        android:paddingStart="16sp"
        android:textSize="14sp"
        android:layout_height="58sp"
        android:background="@drawable/input_background"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        android:layout_marginTop="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginEnd="12sp"
        android:layout_marginStart="12sp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:paddingStart="16sp"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:backgroundTint="@color/main_color"
        android:layout_height="44sp"
        android:background="@drawable/input_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>