<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/icon_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/icon_back"
        android:layout_width="64sp"
        android:layout_height="64sp"
        android:layout_marginTop="32sp"/>

    <ImageView
        app:layout_constraintTop_toTopOf="@id/icon_button"
        app:layout_constraintBottom_toBottomOf="@id/icon_button"
        app:layout_constraintStart_toStartOf="@id/icon_button"
        app:layout_constraintEnd_toEndOf="@id/icon_button"
        android:background="@drawable/app_icon"
        android:layout_width="48sp"
        android:layout_height="48sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:textAllCaps="false"
        android:id="@+id/registration_tv"
        app:layout_constraintTop_toBottomOf="@id/icon_button"
        android:layout_marginTop="32sp"
        android:layout_marginStart="44sp"
        android:text="@string/registration"
        android:textFontWeight="500"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/login_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_width="wrap_content"
        app:layout_constraintHorizontal_bias="0.5"
        android:background="@drawable/active_button"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:textAllCaps="false"
        android:id="@+id/login_tv"
        app:layout_constraintTop_toBottomOf="@id/icon_button"
        android:layout_marginTop="32sp"
        android:layout_marginEnd="44sp"
        android:text="@string/login"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textFontWeight="500"
        android:textSize="18sp"
        android:textColor="#818C99"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:background="@drawable/inactive_button"
        app:layout_constraintStart_toEndOf="@id/registration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        app:layout_constraintTop_toTopOf="@id/icon_button"
        app:layout_constraintBottom_toTopOf="@id/icon_button"
        app:layout_constraintStart_toEndOf="@id/icon_button"
        android:background="@drawable/sharp_star"
        android:layout_width="26sp"
        android:layout_height="26sp"/>

    <ViewSwitcher
        app:layout_constraintTop_toBottomOf="@id/registration_tv"
        android:id="@+id/view_switcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/registration"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <EditText
                android:id="@+id/input_name"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_marginEnd="12sp"
                android:layout_marginStart="12sp"
                android:hint="@string/name"
                android:paddingStart="16sp"
                android:textSize="14sp"
                android:layout_height="58sp"
                android:background="@drawable/input_background"/>

            <EditText
                android:id="@+id/input_phone"
                app:layout_constraintTop_toBottomOf="@id/input_name"
                android:layout_marginTop="8sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_marginEnd="12sp"
                android:layout_marginStart="12sp"
                android:hint="@string/phone_number"
                android:paddingStart="16sp"
                android:textSize="14sp"
                android:layout_height="58sp"
                android:background="@drawable/input_background"/>

            <EditText
                android:id="@+id/input_password"
                app:layout_constraintTop_toBottomOf="@id/input_phone"
                android:layout_marginTop="8sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_marginEnd="12sp"
                android:layout_marginStart="12sp"
                android:hint="@string/password"
                android:paddingStart="16sp"
                android:textSize="14sp"
                android:layout_height="58sp"
                android:background="@drawable/input_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_button"
                app:layout_constraintTop_toBottomOf="@id/input_password"
                android:layout_marginTop="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_marginEnd="12sp"
                android:layout_marginStart="12sp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:backgroundTint="@color/main_color"
                android:layout_height="44sp"
                android:background="@drawable/input_background"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/login"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <EditText
                android:id="@+id/input_phone1"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_marginEnd="12sp"
                android:layout_marginStart="12sp"
                android:hint="@string/phone_number"
                android:paddingStart="16sp"
                android:textSize="14sp"
                android:layout_height="58sp"
                android:background="@drawable/input_background"/>

            <EditText
                android:id="@+id/input_password1"
                app:layout_constraintTop_toBottomOf="@id/input_phone1"
                android:layout_marginTop="8sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_marginEnd="12sp"
                android:layout_marginStart="12sp"
                android:hint="@string/password"
                android:paddingStart="16sp"
                android:textSize="14sp"
                android:layout_height="58sp"
                android:background="@drawable/input_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_button1"
                app:layout_constraintTop_toBottomOf="@id/input_password1"
                android:layout_marginTop="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_marginEnd="12sp"
                android:layout_marginStart="12sp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:backgroundTint="@color/main_color"
                android:layout_height="44sp"
                android:background="@drawable/input_background"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ViewSwitcher>

    <ImageView
        app:layout_constraintTop_toTopOf="@id/auth_error"
        app:layout_constraintBottom_toBottomOf="@id/auth_error"
        android:id="@+id/auth_error_icon"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/failed"
        android:layout_width="24dp"
        android:visibility="gone"
        android:layout_height="24dp"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/view_switcher"
        android:layout_marginTop="32dp"
        android:id="@+id/auth_error"
        android:textColor="@color/color_stroke_negative"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toEndOf="@id/auth_error_icon"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/auth_error"
        android:layout_marginTop="8dp"
        android:id="@+id/text2"
        android:visibility="gone"
        android:text="Номер телефона должен начинаться с +7 \nПароль должен содержать как минимум одну заглавную букву, одну строчную букву, одну цифру и быть длиной от 6 до 20 символов"
        android:textColor="@color/dark_grey"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toEndOf="@id/auth_error_icon"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>