<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="160dp"
    android:background="@drawable/card_container_background"
    android:paddingStart="@dimen/card_horizontal_padding"
    android:paddingEnd="@dimen/card_horizontal_padding"
    android:paddingTop="@dimen/card_vertical_padding"
    android:paddingBottom="@dimen/card_vertical_padding"
    android:layout_marginHorizontal="@dimen/margin_big_half">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/courses_item_marks_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/courses_item_points_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:background="@drawable/card_mark_background"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/courses_item_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_medium"
                android:gravity="center_vertical"
                android:textColor="@color/color_card_mark_text"
                android:textSize="@dimen/text_card_mark"
                android:textStyle="bold"
                tools:text="14" />

            <ImageView
                android:layout_width="@dimen/card_details"
                android:layout_height="@dimen/card_details"
                android:layout_marginStart="@dimen/small_padding"
                android:contentDescription="@string/points"
                android:scaleType="centerInside"
                android:src="@drawable/ic_flash" />

        </LinearLayout>

        <TextView
            android:id="@+id/courses_item_author"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/card_mark_background"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center_vertical"
            android:padding="@dimen/small_padding"
            android:textColor="@color/color_card_mark_text"
            android:textSize="@dimen/text_card_mark"
            app:layout_constraintBottom_toBottomOf="@id/courses_item_points_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/courses_item_points_container"
            tools:text="МФТИ" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/courses_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_elements_margin"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textColor="@color/color_card_mark_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courses_item_marks_container"
        tools:text="Программирование на Python" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="@dimen/card_details"
            android:layout_height="@dimen/card_details"
            android:src="@drawable/ic_students"
            android:scaleType="centerInside"
            android:contentDescription="@string/students" />

        <TextView
            android:id="@+id/courses_item_students_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_very_small"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center_vertical"
            android:textColor="@color/color_card_mark_text"
            android:textSize="@dimen/text_card_title"
            tools:text="233" />

        <ImageView
            android:layout_width="@dimen/card_details"
            android:layout_height="@dimen/card_details"
            android:src="@drawable/ic_graduates3"
            android:contentDescription="@string/graduates"
            android:layout_marginStart="@dimen/card_elements_margin"/>

        <TextView
            android:id="@+id/courses_item_graduates_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_very_small"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center_vertical"
            android:textColor="@color/color_card_mark_text"
            android:textSize="@dimen/text_card_title"
            tools:text="123" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>